--- a/sandy_week_tweets.ipynb
+++ b/sandy_week_tweets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "sandy_week_tweets.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNAV0OXwsTz2opWhU1wAa/L",
+      "authorship_tag": "ABX9TyN5jICzAACRgMzNFW8dHb+r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,24 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/JSchoonmaker/Research/blob/main/sandy_week_tweets.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AzL87EFoBsAL"
+      },
+      "source": [
+        "# Separation and visual comparison of tweets about Sandy Hook for 12-12-2012 through 12-20-2012"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g-Mss2dYB8gl"
+      },
+      "source": [
+        "Mounting SIA google drive access"
       ]
     },
     {
@@ -55,17 +73,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qf8P4eVvmWjM"
-      },
-      "source": [
-        "root_path = 'gdrive/My Drive/SIA_Data_Science/Twitter Scraper Data/sandy_one_year.csv'"
-      ],
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "kvrxAcuqkz3_"
       },
       "source": [
@@ -74,6 +81,26 @@
         "import re"
       ],
       "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v2iHUVW-CLqP"
+      },
+      "source": [
+        "### Loading twint dataset from SIA Google drive\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qf8P4eVvmWjM"
+      },
+      "source": [
+        "root_path = 'gdrive/My Drive/SIA_Data_Science/Twitter Scraper Data/sandy_one_year.csv'"
+      ],
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -379,6 +406,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qfQ8-ZSlCUwv"
+      },
+      "source": [
+        "### Initial exploration of dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -542,6 +578,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p27mYrjiCc0t"
+      },
+      "source": [
+        "### Filtering down dataset to needed fields"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -693,6 +738,15 @@
           },
           "execution_count": 8
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mwySWw1pDBDy"
+      },
+      "source": [
+        "### Limiting dataset to one day"
       ]
     },
     {
@@ -868,6 +922,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O730e7k4DG9f"
+      },
+      "source": [
+        "### Saving day_one dataframe to a csv to test whether it can then be reloaded - or if it will error out. Emma mentioned getting some errors at this step - I was not able to recreate those, perhaps because this is being done in colab?"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "lxESW7Fh74xT"
@@ -1040,6 +1103,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gAR2qOq3DbDb"
+      },
+      "source": [
+        "### Importing libraries to start tokenizing the text from tweets"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1075,6 +1147,19 @@
           },
           "execution_count": 14
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UYI5_IKtDeWN"
+      },
+      "source": [
+        "### Function to tokenize tweets and create word clouds based on most commonly used words from that day's tweets\n",
+        "\n",
+        "### This function is then used on the 2 days prior to the Sandy Hook incident, the day of the incident, and the week following the incident.\n",
+        "\n",
+        "### Of note - these tweets have not been cleaned or filtered except by day. Unrelated tweets, including those about Hurricane Sandy, affect these results as well"
       ]
     },
     {
@@ -2778,6 +2863,22 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZQzA-sPWALoe"
+      },
+      "source": [
+        "# Possible next steps - \n",
+        "\n",
+        "1.   Clean and filter tweets, perhaps by hashtag?\n",
+        "2. Modify times to UTC\n",
+        "3. Chg word cloud parameters to do better visual comparisons   \n",
+        "4. Do more robust comparison of word usage - bigrams/trigrams? - when comparing day of incident to days immediately following incident\n",
+        "5. Expand to datasets of tweets surrounding other incidents, including those not as well known\n",
+        "\n"
       ]
     },
     {
